# qt-pannellum

./: .flake8  .pylintrc  Makefile  lint.sh  mypy.ini  setup.cfg
qt_panellum/: __init__.py  panellum.py
qt_panellum/html/: index.html
qt_panellum/html/panellum/: pannellum.js
