[metadata]
name = qt_panellum
version = 0.0.1

[options]
packages = qt_panellum
include_package_data = True
install_requires =
    PyQt5

[options.package_data]
qt_panellum =
    *.ui
    html/

[options.extras_require]
test =
    black
    pylint
    flake8
    flake8-import-order
    mypy
    types-setuptools
    PyQt5-stubs
