[metadata]
name = qt_panellum
version = 0.0.2

[options]
packages = qt_panellum
include_package_data = True
install_requires =
    PyQt5 @ https://github.com/wladich/PyQt_build/releases/download/1.0/PyQt5-5.15.2-cp37-abi3-manylinux1_x86_64.whl#egg=PyQt5
    typing_extensions

[options.package_data]
qt_panellum =
    *.ui
    html/**/*
    py.typed

[options.extras_require]
test =
    black
    pylint
    flake8<6
    flake8-import-order
    mypy
    types-setuptools
    PyQt5-stubs
